bin/test/Fall_21_Test_Cases/Bad/LO-0/lvl0-bad-easy-sa.lo
//bad case
//string value is not enclosed in "
String xyz;
{
 xyz= Welcome;
}
